Commented out debugger.

--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -157,7 +157,7 @@
 
         /* Formating function for row details */
         function fnFormatDetails(dTable, row) {
-            debugger;
+            //debugger;
             var rowContents = row[0];
             var careerChecked = row.find(".hire-date").hasClass("date-checked");
             var apptChecked = row.find(".title-date").hasClass("date-checked");
