--- a/Esra.Web/Views/EmployeeSalaryComparison/_ExportToExcel.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_ExportToExcel.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Esra.Web.Models.EmployeeSalaryComparisonViewModel
 @*@{
+// This was the old asp.net web forms way of doing this:
         byte[] byteArray = (byte[])HttpContext.Current.Session["ExportExcel"];
 
         // Send the XML file to the web browser for download.
@@ -25,86 +26,90 @@
     <script type="text/javascript">
      <!--
         function NewExportToExcel() {
-            debugger;
+            //debugger;
 
             var oTable;
             oTable = $('#employees').dataTable();
             var oSettings = oTable.fnSettings();
-
-            var oSorting = oSettings.aaSorting[0];
+            var oColumns = oSettings.aoColumns;
+            var oSorting = (oSettings.aaSorting.length == 1 ? oSettings.aaSorting[0] : oSettings.aaSorting[1]);
             var oSortDirection = oSorting[1];
             var oSortTableColumnNumber = oSorting[0];
-            var sortPropertyName = "";
+            var sortPropertyName = (oSortTableColumnNumber != 0 ? oColumns[oSortTableColumnNumber].sName : "FullName");
             var isAscending = oSortDirection != "asc" ? false : true;
 
-            switch (oSortTableColumnNumber) {
-                case 1:
-                    // emp.HomeDepartment.Name
-                    sortPropertyName = "HomeDepartment";
-                    break;
-                case 2:
-                    // emp.TitleCode
-                    sortPropertyName = "TitleCode";
+            // I no longer need the case statement because I added a sName to each column that matches the class property name.
+            //            switch (oSortTableColumnNumber) {
+            //                case 1:
+            //                    // emp.HomeDepartment.Name
+            //                    sortPropertyName = "HomeDepartment";
+            //                    break;
+            //                case 2:
+            //                    // emp.TitleCode
+            //                    sortPropertyName = "TitleCode";
 
-                    break;
-                case 3:
-                    // emp.SalaryGrade
-                    sortPropertyName = "SalaryGrade";
-                    break;
-                case 4:
-                    // emp.BargainingUnitCode
-                    sortPropertyName = "BargainingUnitCode";
-                    break;
-                case 5:
-                    // emp.FullName
-                    sortPropertyName = "FullName";
-                    break;
-                case 6:
-                    // String.Format("{0:MM/dd/yyyy}", emp.AdjustedCareerHireDate)
-                    sortPropertyName = "AdjustedCareerHireDate";
-                    break;
-                case 7:
-                    // (emp.YearsOfService ?? 0d)
-                    sortPropertyName = "YearsOfService";
-                    break;
-                case 8:
-                    // String.Format("{0:MM/dd/yyyy}", emp.AdjustedApptHireDate)
-                    sortPropertyName = "AdjustedApptHireDate";
-                    break;
-                case 9:
-                    // (emp.TimeInTitle ?? 0d)
-                    sortPropertyName = "TimeInTitle";
-                    break;
-                case 10:
-                    // String.Format("{0:MM/dd/yyyy}", emp.ExperienceBeginDate)
-                    sortPropertyName = "ExperienceBeginDate";
-                    break;
-                case 11:
-                    // (emp.YearsOfExperience ?? 0d)
-                    sortPropertyName = "YearsOfExperience";
-                    break;
-                case 12:
-                    // emp.PayRate
-                    sortPropertyName = "PayRate";
-                    break;
-                case 13:
-                    // emp.DepartmentComments
-                    sortPropertyName = "DepartmentComments";
+            //                    break;
+            //                case 3:
+            //                    // emp.SalaryGrade
+            //                    sortPropertyName = "SalaryGrade";
+            //                    break;
+            //                case 4:
+            //                    // emp.BargainingUnitCode
+            //                    sortPropertyName = "BargainingUnitCode";
+            //                    break;
+            //                case 5:
+            //                    // emp.FullName
+            //                    sortPropertyName = "FullName";
+            //                    break;
+            //                case 6:
+            //                    // String.Format("{0:MM/dd/yyyy}", emp.AdjustedCareerHireDate)
+            //                    sortPropertyName = "AdjustedCareerHireDate";
+            //                    break;
+            //                case 7:
+            //                    // (emp.YearsOfService ?? 0d)
+            //                    sortPropertyName = "YearsOfService";
+            //                    break;
+            //                case 8:
+            //                    // String.Format("{0:MM/dd/yyyy}", emp.AdjustedApptHireDate)
+            //                    sortPropertyName = "AdjustedApptHireDate";
+            //                    break;
+            //                case 9:
+            //                    // (emp.TimeInTitle ?? 0d)
+            //                    sortPropertyName = "TimeInTitle";
+            //                    break;
+            //                case 10:
+            //                    // String.Format("{0:MM/dd/yyyy}", emp.ExperienceBeginDate)
+            //                    sortPropertyName = "ExperienceBeginDate";
+            //                    break;
+            //                case 11:
+            //                    // (emp.YearsOfExperience ?? 0d)
+            //                    sortPropertyName = "YearsOfExperience";
+            //                    break;
+            //                case 12:
+            //                    // emp.PayRate
+            //                    sortPropertyName = "PayRate";
+            //                    break;
+            //                case 13:
+            //                    // emp.DepartmentComments
+            //                    sortPropertyName = "DepartmentComments";
 
-                    break;
-                case 14:
-                    // emp.DeansOfficeComments
-                    sortPropertyName = "DeansOfficeComments";
-                    break;
-                default:
-                    sortPropertyName = "FullName";
-            }
+            //                    break;
+            //                case 14:
+            //                    // emp.DeansOfficeComments
+            //                    sortPropertyName = "DeansOfficeComments";
+            //                    break;
+            //                default:
+            //                    sortPropertyName = "FullName";
+            //            }
+
+            // This updated the values of the hidden fields:
             $("#isAscending").val(isAscending);
             $("#sortPropertyName").val(sortPropertyName);
 
             /* Show an example parameter from the settings */
             //alert("propertyName: " + sortPropertyName + "; ascending: " + ascending);
 
+            // This is some ajax code that I have yet to get to work properly.
             //            var token = $('[name=__RequestVerificationToken]').val();
 
             //            $.post('/EmployeeSalaryComparison/ExportToExcel',
@@ -123,9 +128,11 @@
             //                }
             //            );
             //$(this).parents('exportform').submit();
+
+            // This does actually work as desired:
             document.forms["exportform"].submit();
 
-            //_ExportToExcel(sortPropertyName, isAscending, titleCodesString, pkEmployeeID, departmentsString);
+            //_ExportToExcel(sortPropertyName, isAscending, titleCodesString, pkEmployeeID, departmentsString); // This did not work as desired either.
         }
         //-->
     </script>
