Revised EmployeeSalaryComparison/Details view to reuse dtable.
Modified SalaryReviewAnalysisEditorViewModel to correctly build Criteria array.

Modified _SalaryReviewAnalysis view's Criteria ddl to correctly display SelectionTypes.

--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysis.cshtml
@@ -92,8 +92,8 @@
                 <td>
                     @Model.SalaryReviewAnalysis.Scenarios[i].SelectionType<br />
                     <div class="editor-field">
-                        @Html.DropDownListFor(x => @Model.SalaryReviewAnalysis.Scenarios[i].SelectionType, new SelectList(Model.SelectionTypes,
-              "Type", "ShortType", @Model.SalaryReviewAnalysis.Scenarios[i].SelectionType), null, new { id = "ddlSelectionType" })
+                        @Html.DropDownListFor(x => @Model.SalaryReviewAnalysis.Scenarios[i].SelectionType, new SelectList(Model.CriteriaList,
+              "Value", "Key", @Model.SalaryReviewAnalysis.Scenarios[i].SelectionType), null, new { id = "ddlSelectionType" })
                     </div>
                 </td>
                 <td>
