--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Esra.Web.Models.EmployeeSalaryComparisonViewModel
 @using System.Text;
 @section AdditionalScripts{
-    <script language="JavaScript">
+    <script language="JavaScript" type="text/javascript">
 
     // This adds string trim functionality to string data type:
             <!-- Hide from non-JavaScript browsers
@@ -110,8 +110,8 @@
 
             $('#dept-sorter').click(function (event) {
                 //alert($(this).text()); //"Department Name"  // A way to view the cell contents.
-                var oTable = $('#employees').dataTable();
-                var oSettings = oTable.fnSettings();
+                //var oTable = $('#employees').dataTable();
+                var oSettings = dtable.fnSettings();
                 var oColumns = oSettings.aoColumns;
                 var oSorting = (oSettings.aaSorting.length == 1 ? oSettings.aaSorting[0] : oSettings.aaSorting[1]);  // If there's > 1 sort properties column, then we're only interested in the 2nd one, since the first one is the IsDepartmentEmployee column.
                 var oSortDirection = oSorting[1];  // The sort direction is at [1].
